484 - combobox - Better align clear focus; Make sure filter is cleared with clear button.

--- a/src/js/charts/cannabis-local-ordinances/src/js/combobox-places/src/index.scss
+++ b/src/js/charts/cannabis-local-ordinances/src/js/combobox-places/src/index.scss
@@ -2,6 +2,10 @@
  * Code derived from https://www.w3.org/TR/wai-aria-practices-1.1/examples/combobox/aria1.0pattern/css/combobox-1.0.css.
  */
 
+button:focus {
+  outline: solid 2px var(--highlight-color, #fbad23) !important;
+}
+
 $gray-300: #e1e0e3;
 $gray-300-var: var(--gray-300, $gray-300);
 
@@ -99,9 +103,9 @@ $white-var: var(--white, $white);
     border: 0;
     background: none;
     position: absolute;
-    right: 20px;
-    top: 8px;
-    height: 36px;
+    right: 23px;
+    top: 5px;
+    height: 38px;
     width: 36px;
     padding: 0;
 
